# VittaAqui

./: .air.toml  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_PYTHON.md  alembic.ini  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2025_10_11_1755-2f4ffa1ec927_initial_migration.py  2025_10_12_0104-39d7f44437e7_initial_migration.py  2025_10_12_2207-811c5bfc2482_add_reviews_table_and_relationships.py  2025_11_11_0056-add_profile_image_url_to_users.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  database.py  security.py
app/crud/: __init__.py  appointment.py  base.py  professional.py  review.py  user.py
app/models/: __init__.py  appointment.py  enums.py  professional.py  review.py  user.py
app/schemas/: __init__.py  appointment.py  auth.py  professional.py  review.py  user.py
app/services/: __init__.py  appointment.py  auth.py  imagekit.py  professional.py  review.py  s3.py  user.py
app/utils/: exceptions.py  validators.py
cmd/: main.go
docs/: docs.go  swagger.json  swagger.yaml
internal/config/: config.go
internal/controller/: appointment_controller.go  auth_controller.go  professional_profile_controller.go  user_controller.go
internal/handlers/: auth_handler.go  professional_profile_handler.go  user_handler.go
internal/middlewares/: auth.go
internal/models/: appointment.go  profissional.go  user.go
internal/repositories/: user_repository.go  (+2 more)
scripts/: entrypoint.sh  init_db.py  seed_db.py
test/: auth_handler_test.go  professional_handler_test.go  user_handler_test.go
tests/: __init__.py  conftest.py
(+17 files in other folders)
